--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,12 @@
 {
   "lang": "en",
-  "name": "Dress the Weather",
-  "short_name": "d4w",
+  "dir": "ltr",
+  "name": "Dress For The Weather",
+  "short_name": "dev-d4w",
   "description": "Dress for the weather - we'll help!",
   "start_url": "/",
   "background_color": "rgb(200, 200, 200)",
+  "theme-color": "white",
   "display": "fullscreen",
   "icons": [
     {
@@ -12,5 +14,6 @@
       "sizes": "192x192",
       "type": "image/png"
     }
-  ]
+  ],
+  "id": "dev-d4w"
 }
