🍘🚌 Checkpoint ./public/js/sketch.js:13079275/65 ./views/index.html:13079275/186 ./public/manifest.json:13079275/79

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,8 @@
   "background_color": "rgb(200, 200, 200)",
   "theme-color": "white",
   "display": "fullscreen",
-  "icons": [
-    {
-      "src": "/images/maskable-icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  "icons": {
+      "192": "/images/maskable-icon.png"
+  },
   "id": "dev-d4w"
 }
