🌵🏤 Checkpoint ./public/manifest.json:13079275/18 ./views/index.html:13079275/521

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,12 @@
   "background_color": "rgb(200, 200, 200)",
   "theme-color": "white",
   "display": "fullscreen",
-  "icons": {
-      "192": "/images/maskable-icon.png"
-  },
+  "icons": [
+    {
+      "src": "/images/maskable-icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
   "id": "dev-d4w"
 }
