🐥📍 Checkpoint ./views/index.html:13079275/222 ./public/styles/main.css:13079275/6 ./public/js/installer.js:13079275/6 ./.glitch-assets:13079275/394 ./public/manifest.json:13079275/432

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,9 +6,14 @@
   "description": "Dress for the weather - we'll help!",
   "start_url": "/",
   "background_color": "rgb(200, 200, 200)",
-  "theme-color": "white",
+  "theme-color": "rgb(200, 200, 200)",
   "display": "fullscreen",
   "icons": [
+    {
+      "src": "/images/maskable-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
     {
       "src": "/images/maskable-icon.png",
       "sizes": "192x192",
