🎂💑 Checkpoint ./public/sw.js:13079275/88 ./public/manifest.webmanifest:13079275/865 ./views/index.html:13079275/57 ./public/js/sketch.js:13079275/498 ./public/js/installer.js:13079275/497 ./public/manifest.json:13079275/167

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,7 @@
   "short_name": "dev-d4w",
   "description": "Dress for the weather - we'll help!",
   "start_url": "/",
+  "scope": "./",
   "background_color": "rgb(200, 200, 200)",
   "theme-color": "rgb(200, 200, 200)",
   "display": "fullscreen",
