--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "start_url": "/",
   "scope": "./",
   "background_color": "rgb(200, 200, 200)",
-  "theme-color": "rgb(200, 200, 200)",
+  "theme-color": "#c8c8c8",
   "display": "fullscreen",
   "icons": [
     {
