--- a/js/manifest.json
+++ b/js/manifest.json
@@ -4,18 +4,18 @@
     "name": "ReCode PWA Boilerplate",
     "short_name": "recode",
     "description": "A p5 PWA Boilerplate app!",
-    "start_url": "/",
+    "start_url": "../",
     "background_color": "rgb(255,192,203)",
     "theme-color": "#c8c8c8",
     "display": "fullscreen",
     "icons": [
         {
-            "src": "/images/recode-icon-512x512.png",
+            "src": "../images/recode-icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "/images/recode-icon-192x192.png",
+            "src": "../images/recode-icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         }
